--- a/.github/workflows/publish-charm.yaml
+++ b/.github/workflows/publish-charm.yaml
@@ -2,6 +2,9 @@ name: Publish Charm
 
 on:
   workflow_call:
+    secrets:
+      CHARMCRAFT_AUTH:
+        required: true
 
 jobs:
   publish-charm:
@@ -19,15 +22,4 @@ jobs:
         with:
           credentials: "${{ secrets.CHARMCRAFT_AUTH }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-          upload-image: "true"
           channel: "${{ steps.channel.outputs.name }}"
-      - name: Chmod charmcraft logs
-        if: steps.upload.conclusion == 'failure'
-        run: |
-          sudo chmod -R 777 /root/snap/charmcraft/common/cache/charmcraft/log/
-      - name: Archive charmcraft logs
-        if: steps.upload.conclusion == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: charmcraft-upload-logs
-          path: /root/snap/charmcraft/common/cache/charmcraft/log/*.log
