--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist = lint, unit
 [vars]
 src_path = {toxinidir}/src/
 unit_test_path = {toxinidir}/tests/unit/
-lib_path = {toxinidir}/lib/
+lib_path = {toxinidir}/lib/charms/kubernetes_charm_libraries/v0
 all_path = {[vars]src_path} {[vars]unit_test_path} {[vars]lib_path}
 
 [testenv]
