--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ setenv =
     PYTHONPATH = ""
 commands =
     mypy {[vars]all_path} {posargs}
+    /usr/bin/env sh -c 'for m in $(git diff main --name-only {[vars]lib_path}); do if ! git diff main $m | grep -q "+LIBPATCH\|+LIBAPI"; then echo "You forgot to bump the version on $m!"; exit 1; fi; done'
 
 [testenv:unit]
 description = Run unit tests
