Allows access to `/usr/bin/env` in mypy check

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ commands =
 description = Run static analysis checks
 setenv =
     PYTHONPATH = ""
+allowlist_externals = /usr/bin/env
 commands =
     mypy {[vars]all_path} {posargs}
     /usr/bin/env sh -c 'for m in $(git diff main --name-only {[vars]lib_path}); do if ! git diff main $m | grep -q "+LIBPATCH\|+LIBAPI"; then echo "You forgot to bump the version on $m!"; exit 1; fi; done'
