--- a/test-requirements.in
+++ b/test-requirements.in
@@ -1,14 +1,7 @@
-black
+codespell
 coverage[toml]
-flake8-docstrings
-flake8-builtins
-isort
 juju==3.5.2.0
-mypy
-pep8-naming
-pyproject-flake8
+pyright
 pytest
 pytest-operator
-types-PyYAML
-types-setuptools
-types-toml
+ruff
